data/derived/sp14/progs/unify/prog2851.ml.out
Characters 3-4:
  1::2;;
     ^
Error: This expression has type int but an expression was expected of type
         int list
